# Pyrecall

./: CODE_OF_CONDUCT.md  README.md  SECURITY.md  docs.html  index.html  issue_body.md  issue_body2.md  issue_body3.md  issue_body4.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
pyrecall/: __init__.py  cli.py  compress.py  detector.py  hub.py  live.py  model.py  replay.py  rollback.py  snapshot.py  trackers.py  utils.py
pyrecall/benchmarks/: custom.py
tests/: test_benchmarks.py  test_cli.py  test_compress.py  test_detector.py  test_encrypt.py  test_hub.py  test_live.py  test_model.py  test_replay.py  test_rollback.py  test_snapshot.py  test_trackers.py  test_utils_scoring.py
