[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrecall"
version = "0.11.7"
description = "Keep your models balanced. Continuous fine-tuning with automatic forgetting detection and skill rollback."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "pyrecall contributors" }]
keywords = [
    "llm",
    "fine-tuning",
    "continual-learning",
    "catastrophic-forgetting",
    "lora",
    "peft",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "filelock",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
wandb = [
    "wandb>=0.16.0",
]
mlflow = [
    "mlflow>=2.0.0",
]
neptune = [
    "neptune>=1.0.0",
]
trackers = [
    "wandb>=0.16.0",
    "mlflow>=2.0.0",
    "neptune>=1.0.0",
]
privacy = [
    "cryptography>=41.0.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
pyrecall = "pyrecall.cli:app"

[project.urls]
Homepage = "https://github.com/Pyrecall/Pyrecall"
"Bug Tracker" = "https://github.com/Pyrecall/Pyrecall/issues"
PyPI = "https://pypi.org/project/pyrecall"

[tool.hatch.build.targets.wheel]
packages = ["pyrecall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert is fine in tests

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not slow'"
markers = [
    "slow: end-to-end integration tests that load real models (run with -m slow)",
]
